Add: h2: Journals and Associations

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -600,15 +600,12 @@
         <a href="https://www.youtube.com/watch?v=kAuxXvNVhgA">here</a>).
         <br />
         See also
-        <a href="http://blog.ted.com/open-for-discussion-graham-hancock-and-rupert-sheldrake/">Open 
-        for discussion: Graham Hancock and Rupert Sheldrake from TEDxWhitechapel</a>
-        (14 March 2013), 
-        <a href="http://blog.ted.com/graham-hancock-and-rupert-sheldrake-a-fresh-take/">Graham 
-        Hancock and Rupert Sheldrake, a fresh take</a> (18 March 2013) and
-        <a href="http://blog.ted.com/the-debate-about-rupert-sheldrakes-talk/">The 
-        debate about Rupert Sheldrake’s talk</a> (19 March 2013)
-        on the TED blog.
-        (According to Wikipedia, some of 
+        <a href="http://blog.ted.com/open-for-discussion-graham-hancock-and-rupert-sheldrake/">Open for discussion: Graham Hancock and Rupert Sheldrake from TEDxWhitechapel</a>
+        (14 March 2013),
+        <a href="http://blog.ted.com/graham-hancock-and-rupert-sheldrake-a-fresh-take/">Graham Hancock and Rupert Sheldrake, a fresh take</a> (18 March 2013) and
+        <a href="http://blog.ted.com/the-debate-about-rupert-sheldrakes-talk/">The debate about Rupert Sheldrake’s talk</a> (19 March 2013)
+        on the <abbr>TED</abbr> blog.
+        (According to Wikipedia, some of
         <a href="https://en.wikipedia.org/wiki/Rupert_Sheldrake">Rupert Sheldrake's</a>
         ideas received negative reception in the scientific community.)
       </li>
@@ -618,17 +615,17 @@
     <ul>
       <li><span lang="de">Hoyningen-Huene, Paul</span>:
         <a href="https://www.youtube.com/watch?v=2fABS9loKmM">What is the relation between prediction and explanation?</a>,
-        video of a keynote talk at the 
+        video of a keynote talk at the
         <a href="http://www.ea-aw.org/events/annual-ea-conferences/annual-ea-conference-2015.html">2015 Annual <abbr>EA</abbr> Conference</a>,
         11-12 May 2015 (organised by the <abbr>EA</abbr> European Academy of Technology and Innovation Assessment).
       </li>
-      <li lang="fr">Thom, René: 
-        <i class="booktitle">Prédire n’est pas expliquer</i>. (1993) Champs Sciences. Flammarion, 2009. 
-        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35024&levelCode=home"><abbr>ISBN</abbr> 9782081224988</a>.
-        <br /><span lang="en-GB"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a> 
+      <li lang="fr">Thom, René:
+        <i class="booktitle">Prédire n’est pas expliquer</i>. (1993) Champs Sciences. Flammarion, 2009.
+        <a href="https://editions.flammarion.com/predire-n-est-pas-expliquer/9782081224988" hreflang="fr"><abbr>ISBN</abbr> 9782081224988</a>.
+        <br /><span lang="en-GB"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a>
         was a French mathematician who is probably best know as the founder of
         <a href="https://en.wikipedia.org/wiki/Catastrophe_theory">catastrophy theory</a>.</span>
-        <!-- See also P. de Brem: "René Thom, mathématicien philosophe", Banque de Savoirs, Essonne, 01.06.2005: http://www.savoirs.essonne.fr/thematiques/la-matiere/mathematiques/rene-thom-mathematicien-philosophe/ -->
+        <!--See also P. de Brem: "René Thom, mathématicien philosophe", Banque de Savoirs, Essonne, 01.06.2005: http://www.savoirs.essonne.fr/thematiques/la-matiere/mathematiques/rene-thom-mathematicien-philosophe/ -->
       </li>
     </ul>
 
@@ -795,7 +792,7 @@
       </li>
     </ul>
 
-    <h2>Other Links</h2>
+    <h2>Journals and Associations</h2>
     <ul>
       <li>
         <a href="http://journal.philsci.org/" class="journal">Philosophy of Science</a>
@@ -804,6 +801,16 @@
         Non-subscribers can buy single issues as e-book.
         <br />(The journal is <a href="http://www.journals.uchicago.edu/toc/phos/current">published by The University of Chicago Press</a>.)
       </li>
+      <li><del datetime="2021-04-02"The <i class="journal">Prometheus Journal</i>,
+        an undergraduate philosophy journal published by students at Johns Hopkins University,
+        has also published a number of articles on
+        <a href="http://prometheus-journal.com/category/philosophy-of-science/">philosophy of science</a>.</del>
+        (This journal is no longer online. Verified on 02.04.2021.)
+      </li>
+    </ul>
+
+    <h2>Other Links</h2>
+    <ul>
       <li><a href="http://undsci.berkeley.edu/article/philosophy">The philosophy of science</a>
         by the <i>Understanding Science</i> project, is a short article that explains what
         kinds of questions philosophy of science is concerned with, and lists some major 
@@ -821,11 +828,6 @@
         The blog posts cover topics such as methodological naturalism, the demarcation between science and pseudoscience,
         evolution versus creationism and &ldquo;intelligent design&rdquo;, scientism, the possibility of scientific research on the supernatural,
         and critical thinking.
-      </li>
-      <li>The <i class="journal">Prometheus Journal</i>,
-        an undergraduate philosophy journal published by students at Johns Hopkins University,
-        has also published a number of articles on
-        <a href="http://prometheus-journal.com/category/philosophy-of-science/">philosophy of science</a>.
       </li>
       <li>Alger, Bradley E.:
         <i class="booktitle">Defense of the Scientific Hypothesis: From Reproducibility Crisis to Big Data</i>. Oxford University Press, 2019. (456 pages)
@@ -999,7 +1001,7 @@
         In 2013, <span lang="de">Hoyningen-Huene</span> published a book with the same title:
         <i class="booktitle">Systematicity: The Nature of Science</i> (Oxford University Press, 2013.
         <a href="https://global.oup.com/academic/product/systematicity-9780199985050"><abbr>ISBN</abbr> 9780199985050</a>).
-        <!-- Reviews:
+        <!--Reviews:
           * Darrell P. Rowbottom: http://ndpr.nd.edu/news/43713-systematicity-the-nature-of-science/
           * Michael Ruse: http://www.jstor.org/stable/10.1086/676562?ai=13i&af=R#page_scan_tab_contents
           * Esther M. van Dijk: https://www.researchgate.net/publication/249012832_Book_review_Paul_Hoyningen-Huene_Systematicity_The_Nature_of_Science
