Add: slapsa.org

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -801,6 +801,9 @@
         Non-subscribers can buy single issues as e-book.
         <br />(The journal is <a href="http://www.journals.uchicago.edu/toc/phos/current">published by The University of Chicago Press</a>.)
       </li>
+      <li>
+        <a href="https://www.slapsa.org/"><abbr>SLaPSA</abbr>&nbsp;– Saint Louis Area Philosophy of Science Association</a>.
+      </li>
       <li><del datetime="2021-04-02"The <i class="journal">Prometheus Journal</i>,
         an undergraduate philosophy journal published by students at Johns Hopkins University,
         has also published a number of articles on
