--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -317,6 +317,10 @@
         <i class="booktitle">Mathematical Logic for Computer Science</i>. Third edition. Springer, 2012. (346 pages)
         <a href="https://www.springer.com/gp/book/9781447141280"><abbr>ISBN</abbr> 978-1-4471-4128-0</a>.
       </li>
+      <li>Sinclair, William Angus:
+        <i class="booktitle">The Traditional Formal Logic: A Short Account for Students</i>. [1937] Routledge, 2012. (114 pages)
+        <a href="https://www.routledge.com/The-Traditional-Formal-Logic-A-Short-Account-for-Students/Sinclair/p/book/9780367426293"><abbr>ISBN</abbr> 9780367426293</a>.
+      </li>
       <li>
         <a href="https://fivebooks.com/best-books/logic-tom-stoneham/">The best books on Logic recommended by Tom Stoneham</a>,
         <i class="website">Five Books</i>, 13.12.2019.
