add: Wei: hilosophy of Science: An Introduction to the Central Issues

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -301,6 +301,12 @@
         <i class="booktitle">Theorie der Wissenschaften</i></span>. Springer, 2019. (293 pages)
         <a href="https://www.springer.com/de/book/9783658212216"><abbr>ISBN</abbr> 978-3-658-21221-6</a>.
       </li>
+      <li>Wei, Wang:
+        <i class="booktitle">Philosophy of Science: An Introduction to the Central Issues</i>. Routledge, 2021. (220 pages)
+        <a href="https://www.routledge.com/Philosophy-of-Science-An-Introduction-to-the-Central-Issues/Wei/p/book/9781138840812"><abbr>ISBN</abbr> 9781138840812 (hardback)</a>.
+        <br />From the publisher's book description:
+        <q>The book is a translation of the second edition of a much-used and research-based Chinese textbook. As a succinct and issue-based introduction to the Western philosophy of science, the book brings eight focal issues in the field to the fore and augments each topic by incorporating Chinese perspectives. (&hellip;)</q>
+      </li>
     </ul>
 
     <h2>Introductory Lectures (YouTube)</h2>
