Add: Reintjens: Algorithmen im Fokus - Überholt China die USA...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1289,6 +1289,10 @@
         <a href="https://www.heise.de/news/Automatisierte-Entscheidungen-Nur-wenige-positive-Beispiele-in-Europa-5042852.html" hreflang="de">Automatische Entscheidungen per Algorithmus: Wenige positive Beispiele in Europa</a>,
         <i class="website">heise online</i>,</span> 02.02.2021.
       </li>
+      <li><span lang="de">Reintjes, Thomas:
+        <a href="https://www.deutschlandfunk.de/algorithmen-im-fokus-ueberholt-china-die-usa-bei-der.676.de.html?dram:article_id=495101" hreflang="de">Algorithmen im Fokus - Überholt China die <abbr>USA</abbr> bei der Künstlichen Intelligenz?</a>,
+        <i class="website">Deutschlandfunk</i>,</span> 01.04.2021.
+      </li>
     </ul>
 
 
