Add: Philosoph Vieweg über Hegel, 250 Jahre Hegel - Eine Philosophie, die aufs Ganze geht

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -248,6 +248,14 @@
             for https://literature.stackexchange.com/questions/6506/what-did-pope-intend-to-say-by-whatever-is-is-right
           -->
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/philosoph-vieweg-ueber-hegel-bei-hegel-sind-freiheit-und.694.de.html?dram:article_id=467170" hreflang="de">Philosoph Vieweg über Hegel - "Bei Hegel sind Freiheit und Vernunft immer verknüpft"</a>,
+          <i class="website">Deutschlandfunk</i></span>, 05.01.2020.
+        </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunkkultur.de/250-jahre-hegel-eine-philosophie-die-aufs-ganze-geht.2162.de.html?dram:article_id=482828" hreflang="de">250 Jahre Hegel - Eine Philosophie, die aufs Ganze geht</a>,
+          Sebastian Ostritsch im Gespräch mit Stephanie Rohde, <i class="website">Deutschlandfunk</i></span>, 23.08.2020.
+        </li>
         <li lang="de">Stadtbibliothek Stuttgart:
           <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
         </li>
