Add: Brandes: Austritte und verschleppte Aufarbeitung

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -897,6 +897,10 @@
           an online course by The Open University that is hosted on FutureLearn
           It is a four-week course that requires three hours of study per week.
         </li>
+        <li><span lang="de">Brandes, Rainer:
+          <a href="https://www.deutschlandfunk.de/austritte-und-verschleppte-aufarbeitung-die-katholische.724.de.html?dram:article_id=495094">Austritte und verschleppte Aufarbeitung - Die katholische Kirche in der Krise</a>,
+          <i class="website">Deutschlandfunk</i>,</span> 01.04.2021.
+        </li>
 
         <li>Roth, Philip:
           <span lang="fr"><a href="https://www.monde-diplomatique.fr/mav/145/ROTH/54571" hreflang="fr">Plaidoyer athéiste</a>,
