--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -256,6 +256,10 @@
           <a href="https://www.deutschlandfunkkultur.de/250-jahre-hegel-eine-philosophie-die-aufs-ganze-geht.2162.de.html?dram:article_id=482828" hreflang="de">250 Jahre Hegel - Eine Philosophie, die aufs Ganze geht</a>,
           Sebastian Ostritsch im Gespräch mit Stephanie Rohde, <i class="website">Deutschlandfunk</i></span>, 23.08.2020.
         </li>
+        <li><span lang="de">Schumacher, Heidemarie:
+          <a href="https://www.deutschlandfunk.de/klaus-vieweg-hegel-der-philosoph-der-freiheit-gedachte-und.700.de.html?dram:article_id=482568" hreflang="de">Klaus Vieweg: "Hegel. Der Philosoph der Freiheit" - Gedachte und reale Freiheit</a>,
+          <i class="website">Deutschlandfunk</i></span>, 23.08.2020.
+        </li>
         <li lang="de">Stadtbibliothek Stuttgart:
           <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
         </li>
