Add: Michelfeder et al; Hammersley

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -497,6 +497,17 @@
         <i class="booktitle">Philosophy of the Social Sciences: Towards Pragmatism</i>. Polity Press, 2005. (264 pages)
         <a href="https://politybooks.com/bookdetail/?isbn=9780745622460"><abbr>ISBN</abbr> 9780745622477</a>.
       </li>
+      <li>Michelfelder, Diane P.; Doorn, Neelke (editors):
+        <i class="booktitle">The Routledge Handbook of the Philosophy of Engineering</i>. Routledge, 2021. (792 pages)
+        <a href="https://www.routledge.com/The-Routledge-Handbook-of-the-Philosophy-of-Engineering/Michelfelder-Doorn/p/book/9781138244955"><abbr>ISBN</abbr> 9781138244955 (hardback)</a>.
+      </li>
+      <li>Hammersley, Martin:
+        <i class="booktitle">The Dilemma of Qualitative Method: Herbert Blumer and the Chicago Tradition</i>. [1989] Routledge Revivals. Routledge, 2021. (284 pages)
+        <a href="https://www.routledge.com/Routledge-Revivals-The-Dilemma-of-Qualitative-Method-1989-Herbert-Blumer/Hammersley/p/book/9781138489400"><abbr>ISBN</abbr> 9781138489400</a>.
+        <br />From the publisher's book description:
+        <q>Originally published in 1989, <i class="booktitle">The Dilemma of Qualitative Method</i> is a stimulating guide to the discussion of qualitative versus quantitative approaches to social research, originated in nineteenth-century debates about the relationship between the methods of history and natural science.
+        One of the key theorists in this area was Chicago sociologist Herbert Blumer. The book analyses the historical context of the dispute and provides a detailed account and systematic analysis Blumer’s methodological writings including his doctoral thesis. The strategies for qualitative research advocated by Blumer within the Chicago tradition are reviewed and assessed.</q>
+      </li>
     </ul>
 
     <h2>Anthologies</h2>
