--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -260,6 +260,10 @@
           <a href="https://www.deutschlandfunk.de/klaus-vieweg-hegel-der-philosoph-der-freiheit-gedachte-und.700.de.html?dram:article_id=482568" hreflang="de">Klaus Vieweg: "Hegel. Der Philosoph der Freiheit" - Gedachte und reale Freiheit</a>,
           <i class="website">Deutschlandfunk</i></span>, 23.08.2020.
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/freiheit-oder-naturalismus-zur-hochaktualitaet-hegels.1184.de.html?dram:article_id=482684" hreflang="de">Freiheit oder Naturalismus - Zur Hochaktualität Hegels</a>,
+          Andrea Kern im Gespräch mit Thomas Palzer, <i class="website"></i></span>, 23.08.2020.
+        </li>
         <li lang="de">Stadtbibliothek Stuttgart:
           <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
         </li>
