Add: Vormweg: Vor 250 Jahren geboren - Der Philosoph Georg Wilhelm Friedrich Hegel

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -264,6 +264,10 @@
           <a href="https://www.deutschlandfunk.de/freiheit-oder-naturalismus-zur-hochaktualitaet-hegels.1184.de.html?dram:article_id=482684" hreflang="de">Freiheit oder Naturalismus - Zur Hochaktualität Hegels</a>,
           Andrea Kern im Gespräch mit Thomas Palzer, <i class="website"></i></span>, 23.08.2020.
         </li>
+        <li><span lang="de">Vormweg, Christoph:
+          <a href="https://www.deutschlandfunk.de/vor-250-jahren-geboren-der-philosoph-georg-wilhelm.871.de.html?dram:article_id=482906" hreflang="de">Vor 250 Jahren geboren - Der Philosoph Georg Wilhelm Friedrich Hegel</a>,
+          <i class="website">Deutschlandfunk</i></span>, 27.08.2020.
+        </li>
         <li lang="de">Stadtbibliothek Stuttgart:
           <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
         </li>
