--- a/humanities/index.html
+++ b/humanities/index.html
@@ -878,6 +878,20 @@
     </section>
 
     <section>
+      <h2>Historiography</h2>
+      <ul>
+        <li><span lang="fr">Veyne, Paul:
+          <i class="booktitle">Comment on écrit l'histoire</i>. Seuil,</span> 2015. (448 pages)
+          <a href="https://www.seuil.com/ouvrage/comment-on-ecrit-l-histoire-paul-veyne/9782757851562" hreflang="fr"><abbr>ISBN</abbr> 9782757851562</a>.
+        </li>
+        <li><span lang="de">Jordan, Stefan:
+          <i class="booktitle">Theorien und Methoden der Geschichtswissenschaft</i>. 4., aktualisierte Auflage. <abbr>UTB</abbr> 3104. Schöningh,</span> 2018. (230 pages)
+          <a href="https://www.utb-shop.de/theorien-und-methoden-der-geschichtswissenschaft-2517.html" hreflang="de"><abbr>ISBN</abbr> 9783825250058</a>.
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Miscellaneous Other Links</h2>
       <ul>
         <li>
