Add: Barbaglio: Dieu est-il violent ?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -402,6 +402,10 @@
           <i class="booktitle">Barbarism and Religion: Volume 6. Barbarism: Triumph in the West</i>. Cambridge University Press, 2018. (542 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-6?format=PB"><abbr>ISBN</abbr> 9781107464360</a>.
         </li>
+        <li><span lang="fr">Barbaglio, Giuseppe:
+          <i class="booktitle">Dieu est-il violent ? Une lecture des Ecritures juives et chrétiennes</i>. Seuil,</span> 1994. (348 pages)
+          <a href="https://www.seuil.com/ouvrage/dieu-est-il-violent-une-lecture-des-ecritures-juives-et-chretiennes-giuseppe-barbaglio/9782020207959"><abbr>ISBN</abbr> 9782020207959</a>.
+        </li>
       </ul>
     </section>
 
