Add: Savants sous l'Occupation

--- a/science/index.html
+++ b/science/index.html
@@ -456,6 +456,10 @@
           <i class="booktitle">Making 20th Century Science: How Theories Became Knowledge</i>. Oxford University Press, 2015. (552 pages)
           <a href="https://global.oup.com/academic/product/making-20th-century-science-9780199978151"><abbr>ISBN</abbr> 9780199978151 (hardcover)</a>.
         </li>
+        <li><span lang="fr">Chevassus-au-Louis, Nicolas:
+          <i class="booktitle">Savants sous l'Occupation. Enquête sur la vie scientifique française entre 1940 et 1944</i>. Seuil,</span> 2004. (256 pages)
+          <a href="https://www.seuil.com/ouvrage/savants-sous-l-occupation-enquete-sur-la-vie-scientifique-francaise-entre-1940-et-1944-nicolas-chevassus-au-louis/9782020613330" hreflang="fr"><abbr>ISBN</abbr> 9782020613330</a>.
+        </li>
         <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
           recording of a speech at Washington and Lee University in March 2014.
           (John L. Heilbron's lecture starts at 7'54''.)
