Add: Les Maths au tribunal

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -426,6 +426,10 @@
         <a href="https://www.springer.com/gp/book/9783662583258"><abbr>ISBN</abbr> 78-3-662-58325-8</a>.
         <!--https://www.hdm-stuttgart.de/view_news?ident=news20191022150625-->
       </li>
+      <li><span lang="fr">Schneps, Leila; Colmez, Coralie:
+        <i class="booktitle">Les Maths au tribunal. Quand les erreurs de calcul font les erreurs judiciaires</i>. Seuil,</span> 2015. (288 pages)
+        <a href="https://www.seuil.com/ouvrage/les-maths-au-tribunal-leila-schneps/9782021104394" hreflang="fr"><abbr>ISBN</abbr> 9782021104394</a>.
+      </li>
       <li>
         <a href="http://www.rwi-essen.de/unstatistik/" hreflang="de" lang="de">Unstatistik des Monats</a>:
         German website where Thomas K. Bauer, Gerd Gigerenzer, Walter Krämer
