Add: Haworth: Understanding the Political Philosophers

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -387,10 +387,8 @@
           can be downloaded from the Open Yale Courses website.
           The course is also available on
           <a href="https://itunes.apple.com/us/course/philosophy-science-human-nature/id523530509">iTunes</a>.
-          (Yale Open Courses are mostly available under the 
-          <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><abbr 
-          title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 United States">CC 
-          BY-NC-SA 3.0 US</abbr> licence</a>.)
+          (Yale Open Courses are mostly available under the
+          <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><abbr title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 United States">CC BY-NC-SA 3.0 US</abbr> licence</a>.)
         </li>
         <li>The French YouTube channel
           <a href="https://www.youtube.com/user/gabrielshare" lang="fr">Résonance(s)</a>
@@ -1207,6 +1205,12 @@
           <i class="booktitle">Politique de la décoïncidence</i>. L'Herne,</span> 2020. (128 pages)
           <a href="https://www.editionsdelherne.com/publication/politique-de-la-decoincidence/" hreflang="fr">><abbr>ISBN</abbr> Politique de la décoïncidence</a>.
         </li>
+        <li>Haworth, Alan:
+          <i class="booktitle">Understanding the Political Philosophers: From Ancient to Modern Times</i>. Second edition. Routledge, 2012. (352 pages)
+          <a href="https://www.routledge.com/Understanding-the-Political-Philosoph-ers-From-Ancient-to-Modern-Times/Haworth/p/book/9780415685375"><abbr>ISBN</abbr> 9780415685375</a>.
+          <br />This book contains chapters on Socrates, Plato, Aristotle, Hobbes, Locke, Rousseau, John Stuart Mill, Karl Marx and John Rawls.
+          (Machiavelli is not represented.)
+        </li>
         <li>
           <a href="https://fivebooks.com/best-books/italian-political-philosophy-guglielmo-verdirame/">The best books on Italian Political Philosophy recommended by Guglielmo Verdirame</a>,
           <i class="website">Five Books</i>, 04.01.2021.
@@ -1215,7 +1219,7 @@
             <li><i class="booktitle">Discourses on Livy</i> by Niccolo Machiavelli (translated by Harvey Mansfield and Nathan Tarcov),</li>
             <li><i class="booktitle">The New Science of Giambattista Vico: Unabridged Translation of the Third Edition (1744)</i> by by Giambattista Vico (translated by Max Harold Fisch and Thomas Goddard Bergin),</li>
             <li><i class="booktitle">The History of European Liberalism</i> by Guido de Ruggieor (translated R. G. Collingwood),</li>
-            <li><i class="booktitle">Prison Notbooks</i> by Antonio Gramsci (translated by Joseph A. Buttigieg and Antonio Callari),</li>
+            <li><i class="booktitle">Prison Notebooks</i> by Antonio Gramsci (translated by Joseph A. Buttigieg and Antonio Callari),</li>
             <li><i class="booktitle">Liberalism and Democracy</i> by Nortberto Bobbio (translated by Martin Ryle and Kate Soper).</li>
           </u:>
         </li>
