Add: BAD Philosophy Videos! (Philosophy Tube on Kant's Philosophy)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1666,6 +1666,17 @@
           <q>Melvyn Bragg and guests discuss how, in the Enlightenment, Immanuel Kant (1724-1804) sought to define the difference between right and wrong by applying reason, looking at the intention behind actions rather than at consequences. (&hellip;)</q>
           <!--@@also check SoundCloud and YouTube-->
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=ocxRrIa5A0o">BAD Philosophy Videos! (Philosophy Tube on Kant's Philosophy)</a>
+          (<i class="ytchannel">Carefree Wandering</i> on YouTube, 20 minutes, 29.01.2021).
+          <br />In this video, Professor Hans-Georg Moeller (University of Macau) who teaches a course on Kant, explains a number of glaring errors in the video
+          about &ldquo;Beginner's Guide to Kant's Metaphysics &amp; Epistemology&rdquo; on the YouTube channel Philosophy Tube.
+          One of these errors is using the terms &ldquo;transcendent&rdquo; and &ldquo;transcendental&rdquo; interchangeably, even though Kant uses the term &ldquo;transcendental&rdquo; intentionally in a very different way from &ldquo;transcendent&rdquo;.
+          Moeller assumes that the focus of the video was on the profiling of the presenter at the cost of doing research.
+          The people behind Philosophy Tube probably never read Kant's works. (The Kant video was one of the early vidoes on the Philosophy Tube channel, posted in May 2016.)
+          <!--17:00-->Moeller says philosophy should not be commodified in the way Philosophy Tube does this.
+          This does not mean that all short YouTube videos or all Philosophy Tube videos are bad, but viewers should never replace reading philosophical texts with this type of videos.
+        </li>
       </ul>
 
       <h3 lang="de">Arthur Schopenhauer (1788 – 1860)</h3>
