Add: WORSE Philosophy Videos! School of Life on Eastern Philosophy - Lao Tzu

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2169,6 +2169,17 @@
           <a href="https://philosophy.stackexchange.com/q/9569/23586">Why is chinese philosophy usually ignored in western philosophy courses?</a>
           This question was posted on Philosophy Stack Exchange in January 2014 and has several asnwers of varying quality.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=O3y7aiwp4sY">WORSE Philosophy Videos! School of Life on Eastern Philosophy - Lao Tzu</a>
+          (<i class="ytchannel">Carefree Wandering</i> on YouTube, 26 minutes, 17.03.2021).
+          <br />This video comments on the YouTube video &ldquo;Eastern philosophy &mdash; Lao Tzu&rdquo; by The School of Life.
+          Of the six quotes that his video attributes to Lao Zi, only two are actual quotes and two are full fakes.
+          <br />Among other things, Professor Moeller discusses &ldquo;feel good philosophy&rdquo; that often surfaces when discussing &ldquo;Eastern&rdquo; philosophy,
+          <a href="https://en.wikipedia.org/wiki/Orientalism">Orientalism</a> (and Edward Said's book),
+          <!--18:35-->the rhetoric of what Charles Taylor called &lduoq;the age of authenticity&rdquo;
+          <!--21:00: You are expected to become authentic by copying the authenticity of others.-->
+          and the fairy-tale mode of presenting daoism.
+        </li>
       </ul>
     </section>
 
