Add: h2: Blogs and Other Dedicated Websites

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -413,9 +413,25 @@
         <i class="booktitle">Linear Algebra</i> by Lipschutz and Lipson, and
         <i class="booktitle">Linear Algebra and Its Applications</i> by Gilbert Strang.
       </li>
-      <li>:
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
+    </ul>
+
+    <h2>Blogs and Other Dedicated Websites</h2>
+    <ul>
+      <li>
+        <a href="https://beautyofmathematics.com/">Beauty of Mathematics – Math is a Radical Act</a>:
+        a blog maintained by Susan Silver. (Accessed on 20.04.2021.)
+      </li>
+      <li>
+        <a href="http://beautyofmath.org/">The Beauty of Math</a>.
+        According to the site's &ldquo;About&rdquo; page,
+        <q cite="http://beautyofmath.org/about.php">This website was created by several international students of mathematics in mid-2017. The aim: To make mathematical visualizations, mathematical artwork, and algorithmic art publically accessible and concentrate the unlimited possibilities at one place! We want to inspire other people, fuel new mathematical research and emphasize the hidden beauty that lies deep inside the foundations of mathematics.</q>
+        (Accessed on 20.04.2021.)
+      </li>
+      <li>
+        <a href="http://www.rwi-essen.de/unstatistik/" hreflang="de" lang="de">Unstatistik des Monats</a>:
+        German website where Thomas K. Bauer, Gerd Gigerenzer, Walter Krämer
+        take a critical look at newspaper articles and other publications that contain
+        (potentially) misleading statistics or numbers.
       </li>
     </ul>
 
@@ -429,12 +445,6 @@
       <li><span lang="fr">Schneps, Leila; Colmez, Coralie:
         <i class="booktitle">Les Maths au tribunal. Quand les erreurs de calcul font les erreurs judiciaires</i>. Seuil,</span> 2015. (288 pages)
         <a href="https://www.seuil.com/ouvrage/les-maths-au-tribunal-leila-schneps/9782021104394" hreflang="fr"><abbr>ISBN</abbr> 9782021104394</a>.
-      </li>
-      <li>
-        <a href="http://www.rwi-essen.de/unstatistik/" hreflang="de" lang="de">Unstatistik des Monats</a>:
-        German website where Thomas K. Bauer, Gerd Gigerenzer, Walter Krämer
-        take a critical look at newspaper articles and other publications that contain
-        (potentially) misleading statistics or numbers.
       </li>
       <li>Hoekstra, Rink; Morey, Richard D.; Rouder, Jeffrey N.; Wagenmakers, Eric-Jan:
         <a href="https://link.springer.com/article/10.3758%2Fs13423-013-0572-3">Robust misinterpretation of confidence intervals</a>,
