Add: Le livre noir de la psychanalyse

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -837,6 +837,14 @@
         <br /><a href="https://www.lancaster.ac.uk/people-profiles/Rachel-Cooper">Rachel Cooper</a>
         is professor at Lancaster University.
       </li>
+      <li><span lang="fr">[collectif]:
+        <i class="booktitle">Le livre noir de la psychanalyse. Vivre, penser et aller mieux sans Freud</i>. Nouvelle édition. 10/18,</span> 2013. (648 pages)
+        <a href="https://www.lisez.com/livre-de-poche/le-livre-noir-de-la-psychanalyse-nouvelle-edition/9782264059475" hreflang="fr"><abbr>ISBN</abbr> 9782264059475</a>.
+        <br />From the publisher's book description (accessed on 20.04.2021):
+        <q lang="fr">Lors de sa parution en 2005, Le Livre noir de la psychanalyse a suscité une polémique sans précédent : levée de boucliers médiatiques, avalanche de tribunes et de protestations.
+        Malgré le tir de barrage des « chiens de garde » du freudisme, ce livre est devenu un best-seller en France et à l’étranger.
+        Car les questions qu’il soulève sont rudes et ne se réfutent pas d’un trait de plume. (&hellip;)</q>
+      </li>
     </ul>
 
     <h2>Journals and Associations</h2>
@@ -1189,6 +1197,10 @@
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li><span lang="fr">
+        <i class="booktitle"></i>. </span>
+        <a href="" hreflang="fr"><abbr>ISBN</abbr> </a>.
       </li>
       <li>
         <a href=""></a>,
