Add: Miller: L'Anti-Livre noir de la psychanalyse

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -845,6 +845,11 @@
         Malgré le tir de barrage des « chiens de garde » du freudisme, ce livre est devenu un best-seller en France et à l’étranger.
         Car les questions qu’il soulève sont rudes et ne se réfutent pas d’un trait de plume. (&hellip;)</q>
       </li>
+      <li><span lang="fr">Miller, Jacques-Allan:
+        <i class="booktitle">L'Anti-Livre noir de la psychanalyse</i>. Seuil,</span> 2018. (288 pages)
+        <a href="https://www.seuil.com/ouvrage/l-anti-livre-noir-de-la-psychanalyse-jacques-alain-miller/9782757872093" hreflang="fr"><abbr>ISBN</abbr> 9782757872093</a>.
+        <br />This book is a response to <i class="booktitle" lang="fr">Le Livre noir de la psychanalyse</i>.
+      </li>
     </ul>
 
     <h2>Journals and Associations</h2>
