Add: Plato: The Republic

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1455,6 +1455,10 @@
 
       <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
       <ul>
+        <li>Plato:
+          <i class="booktitle">The Republic</i>. Cambridge Texts in the History of Political Thought. Cambridge University Press, 2000. (436 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/plato-republic?format=PB"><abbr>ISBN</abbr> 9780521484435</a>.
+        </li>
         <li>Kraut, Richard:
           <a href="https://plato.stanford.edu/entries/plato/">Plato</a>,
           <i class="website">Stanford Encyclopedia of Philosophy</i>, 20.03.2004; last updated on 01.08.2017.
