Add: Marty: When Faiths Collide

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -873,6 +873,13 @@
           <q cite="https://en.wikipedia.org/wiki/Dan_Barker">left Christianity in 1984.</q>
           He later become co-president of the Freedom From Religion Foundation.
         </li>
+        <li>Marty, Martin E.:
+          <i class="booktitle">When Faiths Collide</i>. Wiley-Blackwell, 2004. (208 pages)
+          <a href="https://www.wiley.com/en-us/When+Faiths+Collide-p-9781405112239"><abbr>ISBN</abbr> 978-1-405-11223-9</a>.
+          <br />From the publisher's book description:
+          <q>In the face of the growing threat from collisions of faith world-wide, this manifesto is a call to embrace religious pluralism. (&hellip;)</q>
+        </li>
+
         <li><span lang="fr">Jourde, Pierre:
           <a href="https://www.nouvelobs.com/les-chroniques-de-pierre-jourde/20201020.OBS34966/aux-musulmans-et-en-particulier-aux-eleves-et-parents-d-eleves-qui-desapprouvent-les-caricatures-de-mahomet.html" hreflang="fr">Aux musulmans, et en particulier aux élèves et parents d’élèves qui désapprouvent les caricatures de Mahomet</a>,
           <i class="magazine">Le Nouvel Obs</i></span>, 20.10.2020.
