add: Ward: True Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -406,6 +406,12 @@
           <i class="booktitle">Dieu est-il violent ? Une lecture des Ecritures juives et chrétiennes</i>. Seuil,</span> 1994. (348 pages)
           <a href="https://www.seuil.com/ouvrage/dieu-est-il-violent-une-lecture-des-ecritures-juives-et-chretiennes-giuseppe-barbaglio/9782020207959"><abbr>ISBN</abbr> 9782020207959</a>.
         </li>
+        <li>Ward, Graham:
+          <i class="booktitle">True Religion</i>. Blackwell Manifestos. Wiley-Blackwell, 2002. (184 pages)
+          <a href="https://www.wiley.com/en-us/True+Religion-p-9780631221746"><abbr>ISBN</abbr> 978-0-631-22174-6</a>.
+          <br />From the publisher's book description:
+          <q>Through reference to plays, poetry, novels, films and painting, this manifesto traces the genealogy of ‘true religion' in the western world and makes six controversial claims about the past, present and future of religion. (&hellip;)</q>
+        </li>
       </ul>
     </section>
 
