Add: Kraut: The Cambridge Companion to Plato

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -356,14 +356,11 @@
         </li>
         <!-- PhilosophyOwl: https://www.youtube.com/user/PhilosophyOwl/feed  -->
         <li>
-          <a href="https://www.youtube.com/user/shinobirastafari/videos">The 
-          Partially Examined Life</a> is a YouTube channel with podcasts
-          (with the same title) and other videos about philosophy.
-          The podcasts and videos typically focus either on a specific philosopher
-          or a specific topic. <br />
+          <a href="https://www.youtube.com/user/shinobirastafari/videos">The Partially Examined Life</a>
+          is a YouTube channel with podcasts (with the same title) and other videos about philosophy.
+          The podcasts and videos typically focus either on a specific philosopher or a specific topic.<br />
           One of their playlists is
-          <a href="https://www.youtube.com/playlist?list=PLc__061N_KkYFJIfoeQ_3qx18726HXt_z">The
-          Partially Examined Life: <abbr title="Partially Dxamined Life">PEL</abbr> guests</a>:
+          <a href="https://www.youtube.com/playlist?list=PLc__061N_KkYFJIfoeQ_3qx18726HXt_z">The Partially Examined Life: <abbr title="Partially Dxamined Life">PEL</abbr> guests</a>:
           this is a playlist of videos from various YouTube channels.<br />
           <a href="https://www.youtube.com/channel/UCdZCYe2YMU5b47xyvcF9pLw/">Partially Examined Life Citizens</a>
           is a related channel. The playlist
@@ -1470,6 +1467,11 @@
         <li>Suzanne, Bernard:
           <a href="https://www.plato-dialogues.org/fr/plato.htm" hreflang="fr">Platon et ses dialogues: liste des oeuvres de Platon</a>,
           <i class="website">Platon et ses dialogues</i>, 29.11.1997; last updated on 22.01.2019.
+        </li>
+        <li>Kraut, Richard (editor):
+          <i class="booktitle">The Cambridge Companion to Plato</i>. Cambridge University Press, 1993. (578 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-plato?format=PB"><abbr>ISBN</abbr> 9780521436106</a>.
+          <!--20.04.2021: €25 + €10: Scrinium Classical Antiquity: https://www.buchfreund.de/de/d/e/9780521436106/the-cambridge-companion-to-plato?bookId=89151109 -->
         </li>
         <li>Lane, Melissa:
           <a href="https://fivebooks.com/best-books/plato-melissa-lane/">The Best Plato Books</a>,
