Add: Ferrari: The Cambridge Companion to Plato's Republic

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1473,6 +1473,10 @@
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-plato?format=PB"><abbr>ISBN</abbr> 9780521436106</a>.
           <!--20.04.2021: €25 + €10: Scrinium Classical Antiquity: https://www.buchfreund.de/de/d/e/9780521436106/the-cambridge-companion-to-plato?bookId=89151109 -->
         </li>
+        <li>Ferrari, G. R. F. (editor):
+          <i class="booktitle">The Cambridge Companion to Plato's Republic</i>. Cambridge Companions to Philosophy. ambridge University Press, 2007. (562 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-platos-republic?format=PB"><abbr>ISBN</abbr> 9780521548427</a>.
+        </li>
         <li>Lane, Melissa:
           <a href="https://fivebooks.com/best-books/plato-melissa-lane/">The Best Plato Books</a>,
           <i class="website">Five Books</i>, 14.07.2014, updated on 01.06.2020.
