--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2805,6 +2805,11 @@
           <br />German translation: <span lang="de"><i class="booktitle">Die kulturelle Entwicklung des menschlichen Denkens</i>. Frankfurt am Main: Suhrkamp</span>, 2002, 2006.
         </li>
         <!--@@@@todo: Massimo Pigliucci's review of Doctor Who and Philosophy: https://philosophynow.org/issues/89/Doctor_Who_and_Philosophy -->
+        <li><span lang="fr">de Diéguez, Manuel:
+          <i class="booktitle">Science et nescience</i>. Collection Bibliothèque des Idées. Gallimard,</span> 1970. (552 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Bibliotheque-des-Idees/Science-et-nescience" hreflang="fr"><abbr>ISBN</abbr> 2070269531</a>.
+          <!--20.04.2021: €16: Antiquariat Uwe Berg: https://www.buchfreund.de/de/d/p/82875861/science-et-nescience -->
+        </li>
         <li>Crane, Tim:
           <a href="https://www.the-tls.co.uk/articles/roger-scruton-1944-2020-tim-crane/">Roger Scruton, 1944–2020</a>,
           <i class="magazine"><abbr>TLS</abbr></i>, January 2020.
