Add: Commodification of Philosophy: Professors vs Influencers

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1687,6 +1687,18 @@
           <!--17:00-->Moeller says philosophy should not be commodified in the way Philosophy Tube does this.
           This does not mean that all short YouTube videos or all Philosophy Tube videos are bad, but viewers should never replace reading philosophical texts with this type of videos.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=0RmJO2IwHek">Commodification of Philosophy: Professors vs Influencers</a>
+          (<i class="ytchannel">Carefree Wandering</i> on YouTube, 14 minutes, 17.02.2021).
+          <br />This is a follow-up video to the previous video.
+          Among other things, Moeller discusses the difference between commodification of philosophy in the education system and on the internet.
+          The biggest group of viewers of the original video are from the <abbr>USA</abbr>.
+          The <abbr>USA</abbr> has a highly commodified higher-education system and this is not the case everywhere; in many countries, universities are public.
+          In the <abbr>USA</abbr>, some people on the left want to forgive student debt instead of tackling the root cause by making the education system public.
+          Commodification of philosophy (or any topic) on the internet is much more intense; viewers' data becomes part of the profit-making system.
+          In addition, the emphasis shifts from the content to the presenter in order to attract more views.
+          (&hellip;)
+        </li>
       </ul>
 
       <h3 lang="de">Arthur Schopenhauer (1788 – 1860)</h3>
