Add: Michaud: Hume et la fin de la philosophie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1612,6 +1612,10 @@
             <li>C. M. Lorkowski: <a href="http://www.iep.utm.edu/hume-rel/">David Hume: Religion</a></li>
           </ul>
         </li>
+        <li><span lang="fr">Michaud, Yves:
+          <i class="booktitle">Hume et la fin de la philosophie</i>. Quadrige. Presses universitaires de France,</span> 1999. (288 pages)
+          <a href="https://www.puf.com/content/Hume_et_la_fin_de_la_philosophie" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-050365-1</a>.
+        </li>
         <li><a href="https://www.youtube.com/playlist?list=PL8BB8343B7F63FB73">John Passmore on Hume</a>
           is a sequence of five videos on Hume (from a <abbr>BBC</abbr> series on philosophy):
           <a href="https://www.youtube.com/watch?v=M6v3ZYt08fY">part 1</a>,
